css/style3.css
#trax
{
	max-width: 45%;
	padding-left: 6%;
	padding-right: 6%;
}

#mac
{
	max-width: 27%;
}

.text
{
	text-align: center,justify;

}

#autocad
{
	padding-top: 3%;
	padding-left: 25%;
	max-width: 50%;
}

#auto2
{
	max-width: 50%;
	padding-left: 6%;
	padding-right: 6%;
}

#trax2
{
	max-width: 20%;
	padding-top: 2%;
}

#mac2
{
	padding-top: 2%;
	padding-left: 27%;
	padding-right: 6%;
	max-width: 15%;
}

#mac3
{
	padding-top: 2%;
	max-width: 27%;
}

#titleF
{
	font-family: Futura, "Trebuchet MS", Arial, sans-serif;
    position: absolute;
    font-size: 275%;
    color: black;
    text-shadow:  0 0 0.2em white, 0 0 0.2em white, 0 0 0.2em white, 0 0 0.2em white, 0 0 0.2em white;
    left: 5%;
    top: 11%;
}

#fridge1
{
	padding-top: 2%;
	max-width: 30%;
	padding-right: 5%;
	padding-left: 16%;
}

#fridge2
{
	max-width: 30%;
}

#fridge3
{
	max-width: 40%;
	padding-right: 6%;
	padding-left: 7%;
	padding-top: 3%;
}

#fridge4
{
	max-width: 30%;
}

#fridge5
{
	max-width: 25%;
	padding-top: 2%;
	padding-left: 25%;
}

#fridge6
{
	max-width: 25%;
}

#titleW
{
	font-family: Futura, "Trebuchet MS", Arial, sans-serif;
    position: absolute;
    font-size: 300%;
    color: black;
    text-shadow:  0 0 0.2em white, 0 0 0.2em white, 0 0 0.2em white, 0 0 0.2em white, 0 0 0.2em white;
    left: 4%;
    top: 10%;
}

#forces
{	
	max-width: 40%;
	padding-left: 10%;
	padding-top: 2%;
	padding-right: 6%;
}

#winds
{
	max-width: 25%;
}

#winds2
{
	max-width: 50%;
	padding-top: 2%;
	padding-left: 8%;
	padding-right: 6%;
}

#winds3
{
	max-width: 20%;
	padding-top: 2%;
}

.logo
{
	max-width: 2%;
	padding-right: 1%;
	margin-top: 5%;
}

.logodown
{
	max-width: 1.5%;
	padding-right: 1%;
	margin-top: 5%;
}

.link
{
	font-size: 150%;
	font-family: Georgia, Times, "Times New Roman", serif;

}

#robot1
{
	padding-left: 19%;
	padding-bottom: 2%;
	max-width: 30%;
}
#robot2
{
	padding-left: 2%;
	max-width: 30%;
}
#robot3
{
	padding-left: 10%;
	padding-bottom: 5%;
	max-width: 15%;
}
#robot4
{
	padding-left: 5%;
	padding-bottom: 3%;
	max-width: 20%;
}
#robot5
{
	padding-left: 5%;
	max-width: 30%;
}
#robot6
{
	padding-left: 17%;
	padding-bottom: 1%;
	max-width: 30%;
}
#robot7
{
	padding-left: 2%;
	max-width: 30%;
}
#robot8
{
	padding-left: 9%;
	padding-top: 2%;
	max-width: 80%;
}

#robot9
{
	padding-left: 27%;
	max-width: 50%;
}

#planets1
{
	max-width: 30%;
	padding-left: 3%;
}
#planets2
{
	max-width: 100%;
	padding-bottom: 8%;
	padding-left: 1%;
}
#planets3
{
	max-width: 100%;
	padding-left: 0%;
}
#planets4
{
	max-width: 50%;
	padding-bottom: 0%;
	padding-left: 4%;
}
#planets5
{
	max-width: 50%;
	padding-bottom: 5%;
	padding-left: 0%;
}
#planets6
{
	max-width: 100%;
	padding-bottom: 0%;
	padding-left: 0%;
}

